done with making responsive of task-1

--- a/LandingPage/public/index.html
+++ b/LandingPage/public/index.html
@@ -24,6 +24,9 @@
     </header>
     <main>
       <div class="page">
+        <div class="imgmbl">
+          <img src="../src/assets/10783893_19197434.jpg" width="300px" alt="" />
+        </div>
         <div class="content">
           <p class="firstl">Grow yourself with use</p>
           <h1>Grow your skill & get world class job's</h1>
@@ -38,7 +41,7 @@
         </div>
       </div>
       <div class="page">
-        <div class="imgsection">
+        <div class="imgsection imgsection2">
           <img src="../src/assets/20286064_6203326.png" alt="" />
         </div>
         <div class="content">
@@ -74,10 +77,11 @@
       </div>
     </main>
     <footer>
-      <div class="fmain" >
-        <p class="flogo" >SkillSpring</p>
+      <div class="fmain">
+        <p class="flogo">SkillSpring</p>
         <p>
-          Non-disclosure agreement seed round seed money accelerator influencer.Growth hacking return nondis sure agreement.
+          Non-disclosure agreement seed round seed money accelerator
+          influencer.Growth hacking return nondis sure agreement.
         </p>
       </div>
       <div>
